@@ -35,7 +35,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: authfd.c,v 1.46 2001/12/05 10:06:12 deraadt Exp $");
+RCSID("$OpenBSD: authfd.c,v 1.47 2002/01/18 18:14:17 stevesk Exp $");
 
 #include <openssl/evp.h>
 
@@ -344,7 +344,7 @@ ssh_decrypt_challenge(AuthenticationConnection *auth,
 	buffer_put_bignum(&buffer, key->rsa->e);
 	buffer_put_bignum(&buffer, key->rsa->n);
 	buffer_put_bignum(&buffer, challenge);
-	buffer_append(&buffer, (char *) session_id, 16);
+	buffer_append(&buffer, session_id, 16);
 	buffer_put_int(&buffer, response_type);
 
 	if (ssh_request_reply(auth, &buffer, &buffer) == 0) {
